@@ -12,8 +12,23 @@ $id = $scriptProperties['id'];
 if (!$res = $modx->getObject('ModOrderedGoods', $id)) {
 	return $modx->error->failure($modx->lexicon('ms.goods.err_nf'));
 }
+$oldval = $res->get('num');
+$gid = $res->get('gid');
+$oid = $res->get('gid');
+
+if ($tmp = $modx->getObject('modResource', $gid)) {
+	$name = $tmp->get('pagetitle');
+}
+else {
+	$name = 'Unknown/deleted';
+}
+
+// Loading miniShop class
+$miniShop = new miniShop($modx);
+
 $oid = $res->get('oid');
 $res->remove();
+$miniShop->Log('goods', $oid, $gid, 'remove', $oldval, 0, 'Removed "'. $name . '" product from the order.');
 
 if ($order = $modx->getObject('ModOrders', $oid)) {
 	$order->updateSum();
